Manifests/demo/deployment-v1.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: speedserver
    env: demo
    version : v1
  name: speedserver-v1
  namespace: eks-demo
spec:
  replicas: 4
  selector:
    matchLabels:
      app: speedserver
      version: v1
  strategy: {}
  template:
    metadata:
      labels:
        app: speedserver
        version : v1
    spec:
      containers:
      - image: 957236318034.dkr.ecr.eu-north-1.amazonaws.com/speedtest-server:v1
        name: speedserver
        resources: {}
status: {}
