Manifests/demo/deployment-v2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: speedserver
    env: demo
    version : v2
  name: speedserver-v2
  namespace: eks-demo
spec:
  replicas: 4
  selector:
    matchLabels:
      app: speedserver
      version: v2
  strategy: {}
  template:
    metadata:
      labels:
        app: speedserver
        version : v2
    spec:
      containers:
      - image: lalx/speedtest_server:v2.0
        name: speedserver
        resources: {}
status: {}
