Manifests/demo/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: speedserver
#    version: v1
  name: speedserver-svc
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
    name: http-port
  selector:
    app: speedserver
  type: ClusterIP
