Manifests/demo/gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: demo-gw 
  namespace: eks-demo
  labels:
    env: demo
spec:
  selector:
    istio: ingressgateway 
  servers:
  - port:
      number: 80 
      name: demo-service-port
      protocol: HTTP
    hosts:
    - demo.alexakis.org
