Manifests/demo/virtual-service.yml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: speedserver-vs
  namespace: eks-demo
spec:
  hosts:
  - demo.alexakis.org
  gateways:
  - demo-gw
  http:
  - route:
    - destination:
        host: speedserver-svc.eks-demo.svc.cluster.local
        subset: base
      weight: 90
    - destination:
        host: speedserver-svc.eks-demo.svc.cluster.local
        subset: canary
      weight: 10
